--- a/Basic Html Website/styles.css
+++ b/Basic Html Website/styles.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content:space-between;
     margin: 2%;
+    transform: skewX(-20deg)
 }
 
 
@@ -20,5 +21,9 @@
 
 main {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+}
+
+#main-page{
+    padding:20%;
 }
