--- a/Basic Html Website/styles.css
+++ b/Basic Html Website/styles.css
@@ -37,14 +37,12 @@ main {
 }
 #sub-pages {
     display: flex;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 2%;
     border: 1px solid #000;
+    width: 100%;
 }
 
-.projects .sub_sub_pages{
-    padding: 10px;
+.sub_sub_pages{
+    width: 100%;
 }
 
 #project-list{
