--- a/Basic Html Website/styles.css
+++ b/Basic Html Website/styles.css
@@ -99,10 +99,34 @@ section#review-page {
     display: flex;
     flex-flow: column;
     align-items: center;
+    padding-bottom: 9%;
 }
+
+div#reviews-list {
+    display: flex
+;
+    flex-flow: row;
+    padding: 20px;
+}
+
+.review-card {
+    border: 1px solid;
+    padding: 12px;
+    border-radius: 20px;
+    margin-left: 10px;
+}
+
+
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 30px;
 }
+
+@media only screen and (max-width: 600px) {
+    #sub-page section#review-page{
+        flex-direction: row;
+    }
+  }
