--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -11,3 +11,23 @@ main{
     justify-content: space-between;
     align-items: center;
 }
+
+#testimony-1{
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    align-items: center;
+    justify-content: center;
+}
+
+#profile-1{
+    display: flex;
+    flex-direction: column;
+    border:1px solid black;
+}
+
+#profile-1 > img{
+    width: 40px;
+    border-radius:50px;
+    border: 1px solid lightslategray;
+}
