--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -26,7 +26,7 @@ main{
     border:1px solid black;
 }
 
-#profile-1 > img{
+#profile-image{
     width: 40px;
     border-radius:50px;
     border: 1px solid lightslategray;
