--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -26,8 +26,24 @@ main{
     border:1px solid black;
 }
 
+#message{
+    border: 1px solid black;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    width: 350px;
+    justify-content: center;
+    align-items: flex-start;
+    background: black;
+    padding-left: 20px;
+    color: #fff;
+    margin-bottom: 15px;
+    font-size: 125%;
+}
+
 #profile-image{
-    width: 40px;
-    border-radius:50px;
-    border: 1px solid lightslategray;
+    width: 90px;
+    border-radius: 100px;
+    margin-right: 20px;
+    padding-left: 6px;
 }
