chore: 97% complete with profile 1

--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -14,16 +14,14 @@ main{
 
 #testimony-1{
     display: flex;
-    flex-direction: row;
-    align-content: space-between;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
 }
 
 #profile-1{
     display: flex;
-    flex-direction: column;
-    border:1px solid black;
+    flex-direction: row;
+    /* border: 1px solid black; */
+    margin-top: auto;
 }
 
 #message{
@@ -46,4 +44,15 @@ main{
     border-radius: 100px;
     margin-right: 20px;
     padding-left: 6px;
+}
+
+#profile-name{
+    font-size: 155%;
+    margin-top: 10px;
+    font-weight: bolder;
+    margin-bottom: 0px;
+}
+
+#profile-role{
+    margin-top: 0px;
 }
