--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -16,7 +16,6 @@ main{
 #testimony-1{
     display: flex;
     flex-direction: column;
-    border:1px solid #000;
 }
 
 #testimony-2{
@@ -24,6 +23,7 @@ main{
     flex-direction: column;
     border:1px solid #000;
     border-radius: 20px;
+    padding-bottom:20px;
 }
 
 #profile-1{
