--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -8,7 +8,7 @@ main{
 #container-1{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
 }
