--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -1,7 +1,6 @@
 main{
     display: flex;
-    flex-direction: row;
-    padding-bottom:30px;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -11,6 +10,37 @@ main{
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
+}
+
+#container-2{
+    display: flex;
+    flex-direction: row;
+    margin-top: 40px;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+#comp-3-img{
+    width: 100%;
+}
+
+#comp-3-img > img{ 
+    width: 80%;
+    border-radius: 25px;
+    height: 100%;
+}
+
+#comp-3-message{
+    width: 130%;
+    display: flex;
+    flex-direction: column;
+    align-items: self-start;
+    font-size: larger;
+    border: 1px solid;
+    border-radius: 25px;
+    background-color: #000;
+    color: #fff;
+    padding: 22px;
 }
 
 #testimony-1{
