--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -15,9 +15,9 @@ main{
 #container-2{
     display: flex;
     flex-direction: row;
-    margin-top: 40px;
     justify-content: space-evenly;
-    padding: 10px;
+    align-items: center;
+    width: 100%;
 }
 
 #comp-3-img{
