--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -15,23 +15,22 @@ main{
 #container-2{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    margin-top: 40px;
+    justify-content: center;
+    padding: 10px;
     width: 100%;
 }
 
 #comp-3-img{
-    width: 100%;
+    display: flex;
 }
 
 #comp-3-img > img{ 
-    width: 80%;
+    width: 248px;
     border-radius: 25px;
-    height: 100%;
 }
 
 #comp-3-message{
-    width: 130%;
     display: flex;
     flex-direction: column;
     align-items: self-start;
@@ -41,6 +40,8 @@ main{
     background-color: #000;
     color: #fff;
     padding: 22px;
+    width: 520px;
+    margin-left: 30px;
 }
 
 #testimony-1{
