--- a/testimony/styles.css
+++ b/testimony/styles.css
@@ -42,6 +42,7 @@ main{
     padding: 22px;
     width: 520px;
     margin-left: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif,cursive;
 }
 
 .star{
@@ -110,4 +111,8 @@ main{
 
 #profile-role{
     margin-top: 0px;
+}
+
+#profile-role{
+    color: lightslategray;
 }
