--- a/accessible_form_ui/style.css
+++ b/accessible_form_ui/style.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: row;
     border: 2px solid #000;
+    border-radius: 25px;
     padding: 10%;
 }
 
@@ -21,9 +22,12 @@ form.form-input-section{
     flex-direction: column;
 }
 
-form.form-input{
-    padding: 0px;
-    width: 100%;
+.form-input{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .form-input > label{
@@ -33,16 +37,19 @@ form.form-input{
 }
 
 input{
-    padding: 10%;
-    width: 100%;
+    padding: 9px;
+    width: 82%;
     font-size: large;
     font-family: 'Times New Roman', Times, serif;
     border: 2px solid #000;
+    border-radius: 10px;
 }
 
 .error{
     color: red;
-    font-size: 30px;
+    font-size: 12px;
+    padding-top: 6px;
+    padding-bottom: 10px;
 }
 
 #email{
@@ -51,9 +58,10 @@ input{
 }
 
 .btn {
-    padding: 30px;
-    border-radius: 5px;
-    width: 50px;
+    padding: 13px;
+    border-radius: 10px;
+    width: 88%;
+    margin-top: 10px;
 }
 
 .btn-dark{
