chore: css for form-progress-section

--- a/accessible_form_ui/style.css
+++ b/accessible_form_ui/style.css
@@ -73,7 +73,7 @@ input{
 .form-progress-section{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 
