--- a/accessible_form_ui/style.css
+++ b/accessible_form_ui/style.css
@@ -85,14 +85,15 @@ input{
     border-top: 2px solid;
     border-bottom: 2px solid;
     border-right: 2px solid grey;
-    margin-bottom: 120px;
 }
 
 .form-checklist{
-    border: 1px solid;
+    border: 1px solid lightgrey;
     border-radius: 10px;
     padding: 10px;
     width: 183px;
+    padding-bottom: 127px;
+    background: lightgrey;
 }
 
 .form-checklist > ul {
