chore: modified css

--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -6,7 +6,7 @@
     padding: 10px;
 }
 
-.grid-container > section {
+.grid-container > img {
     background-color: #f1f1f1;
     text-align: center;
     padding: 10px;
