chore: updated css

--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -1,9 +1,10 @@
 .grid-container{
-    display: grid;
+    display: grid
+;
     grid-template-columns: auto auto auto;
-    gap: 10px;
-    background-color: dodgerblue;
-    padding: 10px;
+    gap: 0px;
+    background-color: #fff;
+    padding: 0px;
 }
 
 .grid-container > img {
