--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -1,20 +1,19 @@
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10%;
+}
+
 .grid-container{
-    display: grid
-;
+    display: grid;
     grid-template-columns: auto auto auto;
-    gap: 0px;
+    gap: 10px;
     background-color: #fff;
     padding: 0px;
 }
 
 .grid-container > img {
     background-color: #f1f1f1;
-    text-align: center;
-    padding: 10px;
-    font-size: 30px;
+    width: 100%;
   }
-
-img{
-    width: 200px;
-    height: 200px;
-}
