chore: modified css to include img

--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -13,7 +13,7 @@ body{
     padding: 0px;
 }
 
-.grid-container > img {
+.grid-container > div > img {
     background-color: #f1f1f1;
     width: 100%;
   }
