chore: change background and padding of grid-container

--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -9,8 +9,8 @@
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 10px;
-    background-color: #fff;
-    padding: 0px;
+    background-color: dodgerblue;
+    padding: 10px;
 }
 .grid-container > div{
     background-color: #f1f1f1;
