--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -10,12 +10,12 @@
     flex-wrap: wrap;
     padding: 0px 4px;
 }
-.grid-container > div{
+/* .grid-container > div{
     background-color: #f1f1f1;
     text-align: center;
     padding: 10px;
     font-size: 30px;
-}
+} */
 
 .grid-container-img {
     flex: 50%;
