--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -17,7 +17,7 @@
     font-size: 30px;
 } */
 
-.grid-container-img {
+.grid-column-img {
     flex: 50%;
     padding: 0 4px;
   }
@@ -27,3 +27,4 @@
     vertical-align: middle;
     flex: 50%;
 }
+
