--- a/image_ui/styles.css
+++ b/image_ui/styles.css
@@ -10,21 +10,17 @@
     flex-wrap: wrap;
     padding: 0px 4px;
 }
-/* .grid-container > div{
-    background-color: #f1f1f1;
-    text-align: center;
-    padding: 10px;
-    font-size: 30px;
-} */
 
 .grid-column-img {
+    display: grid;
     flex: 50%;
     padding: 0 4px;
+    grid-template-columns: auto auto auto;
   }
   
 .grid-container-img > img{
     margin-top: 8px;
     vertical-align: middle;
-    flex: 50%;
+    flex: 25%;
 }
 
