--- a/tool_tip/styles.css
+++ b/tool_tip/styles.css
@@ -3,16 +3,34 @@ body{
 }
 
 main {
-    display: flex;
-    flex-direction: column;
+    display: flex
+;
+    flex-direction: row;
     border: 1px solid black;
     border-radius: 25px;
     width: 100%;
+    padding: 40px;
+    justify-content: space-evenly;
+}
+.help-message{
+    text-align: center;
+    display: flex;
+    width: 200px;
+}
+
+.arrow{
+    border: 1px solid;
+    width: 117px;
+    padding: 0px;
+    height: 1px;
+    background: #000;
+    display: flex;
+    align-self: center;
 }
 
 .toolbar{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .tooltip-message{
@@ -25,7 +43,7 @@ main {
 
 .toolbar-nav{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
